Change to ssh checkout of snudown

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,4 +31,4 @@
 	url = https://github.com/antirez/redis.git
 [submodule "tests/snudown/repo"]
 	path = tests/snudown/repo
-	url = https://github.com/reddit/snudown.git
+	url = ssh://git@github.com/reddit/snudown.git
