Enable reorg for projects where it works
Reorg also works for nginx and python2, but the rust compiler ICEs when
compiling the resulting code, see https://github.com/rust-lang/rust/issues/66464

--- a/tests/zstd/conf.yml
+++ b/tests/zstd/conf.yml
@@ -8,6 +8,7 @@ transpile:
   autogen: true
   binary: fullbench # zstdcli
   cflags: -Qunused-arguments
+  tflags: --reorganize-definitions
 
 cargo:
   autogen: true
