--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -13,12 +13,12 @@ description = "C2Rust transpiler implementation"
 edition = "2018"
 
 [dependencies]
-serde_cbor = "0.9"
 clap = {version = "2.33", features = ["yaml"]}
 dtoa = "0.4.2"
 serde = { version = "1.0", features = ["rc"] }
 serde_json = "1.0"
 serde_derive = "1.0.80"
+serde_bytes = "0.11"
 serde_bencode = "0.2"
 indexmap = { version = "1.0.1", features = ["serde-1"] }
 c2rust-ast-builder = { version = "0.13.0", path = "../c2rust-ast-builder" }
