--- a/tests/nginx/conf.yml
+++ b/tests/nginx/conf.yml
@@ -7,6 +7,8 @@ requirements:
         - zlib1g-dev
 cargo:
   autogen: true
+
 transpile:
   autogen: true
+  tflags: --reorganize-definitions
   binary: nginx
