--- a/c2rust/src/transpile.yaml
+++ b/c2rust/src/transpile.yaml
@@ -38,6 +38,10 @@ args:
       long: translate-const-macros
       help: Enable translation of some C macros into consts
       takes_value: false
+  - translate-fn-macros:
+      long: translate-fn-macros
+      help: "Enable translation of some C function macros into invalid Rust code. WARNING: resulting code will not compile."
+      takes_value: false
   - no-incremental-relooper:
       long: no-incremental-relooper
       help: Disable relooping function bodies incrementally
