Re-enable fast builds on Linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,29 +35,29 @@ jobs:
         containerImage: immunant/c2rust:ubuntu-bionic-latest
   container: $[ variables['containerImage'] ]
   steps:
-  # - script: |
-  #     # rust was installed for the `docker` user, not the user azure creates
-  #     # but cargo and rustup can be controlled via $CARGO_HOME and $RUSTUP_HOME.
-  #     # NOTE: $HOME is not set correctly for the azure user; don't rely on it.
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     cargo build
-  #   displayName: 'Fast build against host clang/LLVM'
+  - script: |
+      # rust was installed for the `docker` user, not the user azure creates
+      # but cargo and rustup can be controlled via $CARGO_HOME and $RUSTUP_HOME.
+      # NOTE: $HOME is not set correctly for the azure user; don't rely on it.
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      cargo build
+    displayName: 'Fast build against host clang/LLVM'
 
-  # - script: |
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     python3 ./scripts/test_translator.py --debug ./tests
-  #   displayName: 'Test translator (fast build)'
+  - script: |
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      python3 ./scripts/test_translator.py --debug ./tests
+    displayName: 'Test translator (fast build)'
 
-  # - script: |
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     cargo clean
-  #   displayName: 'Cargo clean'
+  - script: |
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      cargo clean
+    displayName: 'Cargo clean'
 
   - script: |
       export PATH="/home/docker/.cargo/bin:$PATH"
@@ -73,26 +73,26 @@ jobs:
       python3 ./scripts/test_translator.py ./tests
     displayName: 'Test translator against developer build (LLVM 7)'
 
-  # - script: |
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     cargo clean
-  #   displayName: 'Cargo clean'
+  - script: |
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      cargo clean && rm -rf build
+    displayName: 'Cargo clean && rm -rf build'
 
-  # - script: |
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     python3 ./scripts/build_translator.py --debug --with-llvm-version=8.0.0
-  #   displayName: 'Developer build against local LLVM 8'
+  - script: |
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      python3 ./scripts/build_translator.py --with-llvm-version=8.0.0
+    displayName: 'Developer build against local LLVM 8'
 
-  # - script: |
-  #     export PATH="/home/docker/.cargo/bin:$PATH"
-  #     export RUSTUP_HOME=/home/docker/.rustup
-  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-  #     python3 ./scripts/test_translator.py --debug ./tests
-  #   displayName: 'Test translator against developer build (LLVM 8)'
+  - script: |
+      export PATH="/home/docker/.cargo/bin:$PATH"
+      export RUSTUP_HOME=/home/docker/.rustup
+      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      python3 ./scripts/test_translator.py ./tests
+    displayName: 'Test translator against developer build (LLVM 8)'
 
 - job: Darwin
   timeoutInMinutes: 120
