Address AH review feedback

--- a/c2rust-ast-exporter/src/CMakeLists.txt
+++ b/c2rust-ast-exporter/src/CMakeLists.txt
@@ -49,10 +49,9 @@ if( PROJECT_NAME STREQUAL "LLVM" )
   add_clang_executable(c2rust-ast-exporter ${AST_EXPORTER_BIN_SRCS} DEPENDS clang-headers)
   add_clang_library(clangAstExporter ${AST_EXPORTER_SRCS} DEPENDS clang-headers)
 
-  if( PROJECT_VERSION VERSION_LESS "10.0.0" )
-    set(LLVM_LINK_COMPONENTS Support)
-  else()
-    set(LLVM_LINK_COMPONENTS Support FrontendOpenMP)
+  set(LLVM_LINK_COMPONENTS Support)
+  if( PROJECT_VERSION VERSION_GREATER_EQUAL "10.0.0" )
+      list(APPEND LLVM_LINK_COMPONENTS FrontendOpenMP)
   endif()
 else()
   find_package(LLVM REQUIRED CONFIG)
