--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,10 @@ jobs:
     matrix:
       arch:
         containerImage: immunant/c2rust:archlinux-base-latest
-      debian8:
-        containerImage: immunant/c2rust:debian-jessie-latest
       debian9:
         containerImage: immunant/c2rust:debian-stretch-latest
+      debian10:
+        containerImage: immunant/c2rust:debian-buster-latest
       fedora29:
         containerImage: immunant/c2rust:fedora-29-latest
       ubuntu16:
