--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,10 @@ jobs:
     matrix:
       arch:
         containerImage: immunant/c2rust:archlinux-base-latest
-      debian8:
-        containerImage: immunant/c2rust:debian-jessie-latest
       debian9:
         containerImage: immunant/c2rust:debian-stretch-latest
+      debian10:
+        containerImage: immunant/c2rust:debian-buster-latest
       fedora29:
         containerImage: immunant/c2rust:fedora-29-latest
       ubuntu16:
@@ -42,14 +42,14 @@ jobs:
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      cargo build
+      cargo build --release
     displayName: 'Fast build against host clang/LLVM'
 
   - script: |
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      python3 ./scripts/test_translator.py --debug ./tests
+      python3 ./scripts/test_translator.py ./tests
     displayName: 'Test translator (fast build)'
 
   - script: |
@@ -63,36 +63,36 @@ jobs:
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      python3 ./scripts/build_translator.py --with-llvm-version=7.0.1
-    displayName: 'Developer build against local LLVM 7'
+      python3 ./scripts/build_translator.py --with-llvm-version=10.0.0
+    displayName: 'Developer build against local LLVM 10'
 
   - script: |
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
       python3 ./scripts/test_translator.py ./tests
-    displayName: 'Test translator against developer build (LLVM 7)'
+    displayName: 'Test translator against developer build (LLVM 10)'
 
-  - script: |
-      export PATH="/home/docker/.cargo/bin:$PATH"
-      export RUSTUP_HOME=/home/docker/.rustup
-      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      cargo clean && rm -rf build
-    displayName: 'Cargo clean && rm -rf build'
+  # - script: |
+  #     export PATH="/home/docker/.cargo/bin:$PATH"
+  #     export RUSTUP_HOME=/home/docker/.rustup
+  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+  #     cargo clean && rm -rf build
+  #   displayName: 'Cargo clean && rm -rf build'
 
-  - script: |
-      export PATH="/home/docker/.cargo/bin:$PATH"
-      export RUSTUP_HOME=/home/docker/.rustup
-      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      python3 ./scripts/build_translator.py --with-llvm-version=8.0.0
-    displayName: 'Developer build against local LLVM 8'
+  # - script: |
+  #     export PATH="/home/docker/.cargo/bin:$PATH"
+  #     export RUSTUP_HOME=/home/docker/.rustup
+  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+  #     python3 ./scripts/build_translator.py --with-llvm-version=8.0.0
+  #   displayName: 'Developer build against local LLVM 8'
 
-  - script: |
-      export PATH="/home/docker/.cargo/bin:$PATH"
-      export RUSTUP_HOME=/home/docker/.rustup
-      export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      python3 ./scripts/test_translator.py ./tests
-    displayName: 'Test translator against developer build (LLVM 8)'
+  # - script: |
+  #     export PATH="/home/docker/.cargo/bin:$PATH"
+  #     export RUSTUP_HOME=/home/docker/.rustup
+  #     export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+  #     python3 ./scripts/test_translator.py ./tests
+  #   displayName: 'Test translator against developer build (LLVM 8)'
 
 - job: Darwin
   timeoutInMinutes: 120
@@ -115,7 +115,7 @@ jobs:
 
   - script: |
       source $HOME/.cargo/env
-      cargo build
+      cargo build --release
     displayName: 'Fast build against host clang/LLVM'
 
   - script: |
