--- a/c2rust-ast-exporter/src/CMakeLists.txt
+++ b/c2rust-ast-exporter/src/CMakeLists.txt
@@ -49,7 +49,10 @@ if( PROJECT_NAME STREQUAL "LLVM" )
   add_clang_executable(c2rust-ast-exporter ${AST_EXPORTER_BIN_SRCS} DEPENDS clang-headers)
   add_clang_library(clangAstExporter ${AST_EXPORTER_SRCS} DEPENDS clang-headers)
 
-  set(LLVM_LINK_COMPONENTS support)
+  set(LLVM_LINK_COMPONENTS Support)
+  if( PROJECT_VERSION_MAJOR GREATER 9 )
+      list(APPEND LLVM_LINK_COMPONENTS FrontendOpenMP)
+  endif()
 else()
   find_package(LLVM REQUIRED CONFIG)
 
@@ -87,7 +90,7 @@ endif()
 add_definitions(-DCLANG_LIBDIR_SUFFIX="${LLVM_LIBDIR_SUFFIX}")
 
 set_target_properties(c2rust-ast-exporter PROPERTIES
-  CXX_STANDARD 11
+  CXX_STANDARD 14
   CXX_EXTENSIONS OFF
   )
 # PRIVATE was added to make c2rust-ast-exporter build with LLVM 6.0. Keyword
@@ -102,7 +105,7 @@ target_link_libraries(c2rust-ast-exporter PRIVATE
   )
 
 set_target_properties(clangAstExporter PROPERTIES
-  CXX_STANDARD 11
+  CXX_STANDARD 14
   CXX_EXTENSIONS OFF
   )
 target_link_libraries(clangAstExporter PRIVATE
