--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -22,15 +22,13 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout c2rust
       uses: actions/checkout@v2
-      with:
-        path: c2rust
 
     - name: Checkout c2rust-testsuite
       uses: actions/checkout@v2
       with:
         repository: immunant/c2rust-testsuite
-        path: c2rust-testsuite
-        token: ${{ secrets.GH_ACTIONS_READ_ONLY_PAT }}
+        path: $GITHUB_WORKSPACE/c2rust-testsuite
+        token: ${{ secrets.GH_ACTIONS_CONTROL_PRIV_REPOS }}
 
     # Runs a single command using the runners shell
     - name: Provision c2rust-testsuite
