--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -20,6 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    # Working dir is /home/runner/work/c2rust/c2rust
     - name: Checkout c2rust
       uses: actions/checkout@v2
 
@@ -27,15 +28,16 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: immunant/c2rust-testsuite
-        path: $GITHUB_WORKSPACE/c2rust-testsuite
         token: ${{ secrets.GH_ACTIONS_CONTROL_PRIV_REPOS }}
+        path: testsuite
 
     # Runs a single command using the runners shell
     - name: Provision c2rust-testsuite
-      run: sudo apt-get install \
-        libreadline-dev \
-        rcs && \ 
-        python3 -m pip -r $GITHUB_WORKSPACE/c2rust-testsuite/requirements.txt
+      run: |
+        sudo apt-get -qq update
+        sudo apt-get -qq install \
+            libreadline-dev rcs 
+        python3 -m pip -r $GITHUB_WORKSPACE/c2rust/testsuite/requirements.txt
 
     # Runs a single command using the runners shell
     - name: Build c2rust
@@ -44,4 +46,4 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        echo "$GITHUB_WORKSPACE"
