--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  ubuntu-latest:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,6 +24,7 @@ jobs:
     - name: Checkout c2rust
       uses: actions/checkout@v2
 
+    # Working dir is /home/runner/work/c2rust/c2rust/testsuite
     - name: Checkout c2rust-testsuite
       uses: actions/checkout@v2
       with:
@@ -37,7 +38,11 @@ jobs:
         sudo apt-get -qq update
         sudo apt-get -qq install \
             libreadline-dev rcs 
-        python3 -m pip -r $GITHUB_WORKSPACE/c2rust/testsuite/requirements.txt
+        pwd
+        ls $GITHUB_WORKSPACE
+        ls $GITHUB_WORKSPACE/c2rust
+        ls $GITHUB_WORKSPACE/c2rust/testsuite
+        python3 -m pip install -r $GITHUB_WORKSPACE/c2rust/testsuite/requirements.txt
 
     # Runs a single command using the runners shell
     - name: Build c2rust
