--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -13,9 +13,9 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-on-ubuntu:
+  build-on-ubuntu-18.04:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -36,8 +36,10 @@ jobs:
     - name: Provision c2rust-testsuite
       run: |
         sudo apt-get -qq update
-        sudo apt-get -qq install \
-            libreadline-dev rcs 
+        sudo apt-get -qq install    \
+            libreadline-dev         \
+            python3-setuptools      \
+            rcs
         python3 -m pip install -r $GITHUB_WORKSPACE/testsuite/requirements.txt
 
     # Runs a single command using the runners shell
