--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -52,6 +52,7 @@ jobs:
       run: cargo build --release
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Run c2rust testsuite
       run: |
-        echo "$GITHUB_WORKSPACE"
+        export PATH=$PWD/target/release
+        python3 testsuite/test.py lua
