--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -56,5 +56,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run c2rust testsuite
       run: |
-        export PATH=$PWD/target/release
+        export PATH=$PWD/target/release:$PATH
         python3 testsuite/test.py lua
