Fix yaml formatting harder :)

--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -33,7 +33,7 @@ jobs:
         path: testsuite
 
     - name: Cache Rust artifacts
-    - uses: actions/cache@v2
+      uses: actions/cache@v2
       with:
         path: |
           ~/.cargo/registry
