Cache compile commands

--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -33,13 +33,14 @@ jobs:
         path: testsuite
         submodules: true
 
-    - name: Cache Rust artifacts
+    - name: Cache Rust artifacts & compile commands
       uses: actions/cache@v2
       with:
         path: |
           ~/.cargo/registry
           ~/.cargo/git
           target
+          $GITHUB_WORKSPACE/testsuite/tests/**/compile_commands.json
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Provision Rust
