Capture log files as build artifacts

--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -92,3 +92,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
       if: always() # Pick up events even if the job fails or is canceled.
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: testsuite-log-files
+        path: $GITHUB_WORKSPACE/testsuite/**/*.log
+      if: always()
