Add compile_commands.json files to build artifacts

--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -95,6 +95,8 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: testsuite-log-files
-        path: ${{ github.workspace }}/testsuite/**/*.log
+        name: testsuite-build-artifacts
+        path: |
+          ${{ github.workspace }}/testsuite/**/*.log
+          ${{ github.workspace }}/testsuite/**/compile_commands.json
       if: always()
