Provision LLVM 9 on macOS

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -113,14 +113,12 @@ jobs:
       brew remove curl
       # prepare environment for the following steps
       source $HOME/.cargo/env
-      export LLVM_CONFIG_PATH=/usr/local/opt/llvm/bin/llvm-config
-      # Temporary fix to make sure we have LLVM 10.0.1_1 or later
-      brew upgrade llvm
+      brew info llvm@9
     displayName: 'Provision macOS'
 
   - script: |
-      echo $LLVM_CONFIG_PATH
-      export LLVM_CONFIG_PATH=/usr/local/opt/llvm/bin/llvm-config
+      # Temporary fix to use LLVM 9 due to problems with LLVM 10.0.1
+      export LLVM_CONFIG_PATH=$(brew --prefix llvm@9)/bin/llvm-config
       cargo build --release
     displayName: 'Fast build against host clang/LLVM'
 
