--- a/c2rust/src/transpile.yaml
+++ b/c2rust/src/transpile.yaml
@@ -164,10 +164,15 @@ args:
       short: W
       help: Enable the specified warning (all enables all warnings)
       takes_value: true
+  - use-libc-types:
+      long: use-libc-types
+      help: Use primitive types from libc crate instead of std::os::raw
+      takes_value: false
   - emit-no-std:
       long: emit-no-std
       help: Emit code using core rather than std
       takes_value: false
+      requires: use-libc-types
   - disable-refactoring:
       long: disable-refactoring
       help: Disable running refactoring tool after translation
