--- a/.travis.yml
+++ b/.travis.yml
@@ -13,33 +13,10 @@ branches:
 matrix:
   fast_finish: true
   include:
-    # - os: osx
-    #   # osx_image: xcode9.3 # request macOS 10.13
-    #   env: >-
-    #       # https://docs.travis-ci.com/user/caching/#caches-and-build-matrices
-    #       CACHE_NAME=OSX_DEV_BUILD
-    #       PATH="/usr/local/opt/ccache/libexec:$PATH"
-    #       USE_CCACHE=1
-    #       CCACHE_COMPRESS=1
-    #       CCACHE_CPP2=1
-
     - os: osx
       env: >-
           CACHE_NAME=OSX_FAST_BUILD
           # https://github.com/immunant/c2rust/blob/master/README.md#building-c2rust
-          LLVM_CONFIG_PATH=$(brew --prefix llvm@11)/bin/llvm-config
-
-    # - os: linux
-    #   dist: xenial
-    #   env: >-
-    #       CACHE_NAME=LINUX_DEV_BUILD
-    #       PATH="/usr/lib/ccache:/usr/bin:$PATH"
-    #       USE_CCACHE=1
-    #       CCACHE_CPP2=1
-    #       CCACHE_COMPRESS=1
-    #   before_script:
-    #     # Clang is not in `/usr/lib/ccache/`, so it needs to be added
-    #     - sudo /usr/sbin/update-ccache-symlinks
 
     - os: linux
       dist: xenial
@@ -51,22 +28,18 @@ cache:
   directories:
     - $HOME/.rustup
     - $HOME/.cargo
-    - $HOME/.ccache
-    - $TRAVIS_BUILD_DIR/ast-importer/target.travis
-    - $TRAVIS_BUILD_DIR/cross-checks/rust-checks/config/target
-    - $TRAVIS_BUILD_DIR/cross-checks/rust-checks/rustc-plugin/target
-    - $TRAVIS_BUILD_DIR/cross-checks/rust-checks/runtime/target
-    - $TRAVIS_BUILD_DIR/cross-checks/rust-checks/derive-macros/target
-    - $TRAVIS_BUILD_DIR/rust-refactor/target
+    - $TRAVIS_BUILD_DIR/c2rust-ast-importer/target.travis
+    - $TRAVIS_BUILD_DIR/c2rust-refactor/target
 
 install:
   - /usr/bin/env python3 --version
-  - echo $LLVM_CONFIG_PATH
-  - ls -la $LLVM_CONFIG_PATH
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       # HOMEBREW_NO_AUTO_UPDATE=1 brew upgrade python
       ./scripts/provision_mac.sh
+      export LLVM_CONFIG_PATH=$(brew --prefix llvm@11)/bin/llvm-config
+      echo $LLVM_CONFIG_PATH
+      ls -la $LLVM_CONFIG_PATH
     else
       sudo -H ./scripts/provision_deb.sh
       ./scripts/provision_rust.sh
@@ -76,22 +49,8 @@ install:
 # NOTE: travis doesn't automatically terminate if command fails.
 script:
   - |
-    case "$CACHE_NAME" in
-      LINUX_DEV_BUILD|OSX_DEV_BUILD)
-        ccache -s
-        python3 ./scripts/build_translator.py --debug || travis_terminate 1
-        ccache -s
-        # `ccache` needs to be disabled when running tests, because in some instances
-        # the cached result would differ from the actual result thus causing a failure.
-        # This issue would usually occur in the `test_shuffle_vectors` test.
-        export CCACHE_DISABLE=1
-        python3 ./scripts/test_translator.py --debug ./tests || travis_terminate 1
-        ;;
-      LINUX_FAST_BUILD|OSX_FAST_BUILD)
-        cargo build
-        python3 ./scripts/test_translator.py --debug ./tests || travis_terminate 1
-        ;;
-    esac
+    cargo build || travis_terminate 1
+    python3 ./scripts/test_translator.py --debug ./tests || travis_terminate 1
 
 notifications:
   slack:
