--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -60,18 +60,19 @@ jobs:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
 
-    - name: Get Image Version
-      id: get-image-ver
-      run: |
-        echo "::set-output name=version::$(echo $ImageVersion)"
-      shell: bash
+    # TODO(pl): Figure out why json-c fails when caching compile comands
+    # - name: Get Image Version
+    #   id: get-image-ver
+    #   run: |
+    #     echo "::set-output name=version::$(echo $ImageVersion)"
+    #   shell: bash
 
-    - name: Cache testsuite compile_commands
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ github.workspace }}/testsuite/tests/**/compile_commands.json
-        key: ${{ runner.os }}-ccdb-${{ steps.get-image-ver.outputs.version }}
+    # - name: Cache testsuite compile_commands
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: |
+    #       ${{ github.workspace }}/testsuite/tests/**/compile_commands.json
+    #     key: ${{ runner.os }}-ccdb-${{ steps.get-image-ver.outputs.version }}
 
     - name: Provision Rust
       run:  rustup component add rustfmt-preview rustc-dev
