--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -16,6 +16,7 @@ travis-ci = { repository = "immunant/c2rust" }
 azure-devops = { project = "immunant/c2rust", pipeline = "immunant.c2rust", build="1" }
 
 [dependencies]
+cargo = "0.44"
 clap = {version = "2.33", features = ["yaml"]}
 log = "0.4"
 env_logger = "0.7"
@@ -23,6 +24,8 @@ regex = "1.3"
 shlex = "0.1"
 c2rust-transpile = { version = "0.15.1", path = "../c2rust-transpile" }
 c2rust-refactor = { version = "0.15.0", path = "../c2rust-refactor" }
+tempfile = "3.2"
+toml_edit = "0.1"
 
 [build-dependencies]
 rustc_version = "0.2"
