--- a/analysis/runtime/Cargo.toml
+++ b/analysis/runtime/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 [lib]
 
 [dependencies]
-serde = "1.0.80"
-serde_derive = "1.0.80"
+serde = { version = "1.0", features = ["derive"] }
 bincode = "1.0.1"
 lazy_static = "1.2.0"
