--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
 - job: Linux
   timeoutInMinutes: 120
   pool:
-    vmImage: 'Ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   strategy:
     matrix:
       arch:
@@ -97,12 +97,10 @@ jobs:
 - job: Darwin
   timeoutInMinutes: 120
   pool:
-    vmImage: 'macos-10.15'
+    vmImage: 'macOS-latest'
   steps:
   - script: |
       ./scripts/provision_mac.sh
-      # Pick the most recent toolchain (the default is Xcode 11.3.1)
-      sudo xcode-select --switch /Applications/Xcode_11.4.app/Contents/Developer
       # speeds up provisioning
       export HOMEBREW_NO_AUTO_UPDATE=1
       # helps the `curl-sys` create determine how to link in libcurl.
@@ -113,11 +111,11 @@ jobs:
       brew remove curl
       # prepare environment for the following steps
       source $HOME/.cargo/env
-      brew info llvm@11
+      brew info llvm
     displayName: 'Provision macOS'
 
   - script: |
-      export LLVM_CONFIG_PATH=$(brew --prefix llvm@11)/bin/llvm-config
+      export LLVM_CONFIG_PATH=$(brew --prefix llvm)/bin/llvm-config
       cargo build --release
     displayName: 'Fast build against host clang/LLVM'
 
