--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ jobs:
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
-      python3 ./scripts/build_translator.py --with-llvm-version=10.0.0
+      python3 ./scripts/build_translator.py --with-llvm-version=10.0.1
     displayName: 'Developer build against local LLVM 10'
 
   - script: |
@@ -125,17 +125,11 @@ jobs:
   - script: cargo clean
     displayName: 'Cargo clean'
 
-  - script: python3 ./scripts/build_translator.py --with-llvm-version=7.0.1
-    displayName: 'Developer build against local LLVM 7'
+    # LLVM 10.0.X on macOS 10.15 and fails with a CMake error but later
+    # LLVM releases do not. See this issue for an example of the error.
+    # https://github.com/spack/spack/issues/19905#issuecomment-727268589
+  - script: python3 ./scripts/build_translator.py --with-llvm-version=11.1.0
+    displayName: 'Developer build against local LLVM 11'
 
   - script: python3 ./scripts/test_translator.py ./tests
-    displayName: 'Test translator against developer build (LLVM 7)'
-
-  - script: cargo clean && rm -rf build
-    displayName: 'Cargo clean && rm -rf build'
-
-  - script: python3 ./scripts/build_translator.py --with-llvm-version=8.0.0
-    displayName: 'Developer build against local LLVM 8'
-
-  - script: python3 ./scripts/test_translator.py ./tests
-    displayName: 'Test translator against developer build (LLVM 8)'
+    displayName: 'Test translator against developer build (LLVM 11)'
