ci: Set GNUPGHOME when running in Azure
gnupg tries to create ~/.gnupg but Azure has HOME misconfigured, so give it an alternative directory. gnupg is used to verify the signature of the LLVM package downloaded by build_translator.py

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ jobs:
       export PATH="/home/docker/.cargo/bin:$PATH"
       export RUSTUP_HOME=/home/docker/.rustup
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
+      export GNUPGHOME=$AGENT_TEMPDIRECTORY
       python3 ./scripts/build_translator.py --with-llvm-version=10.0.1
     displayName: 'Developer build against local LLVM 10'
 
