convert c2rust-ast-printer to use forked prettyplease
this fork is unfortunate but maybe can be avoided as it merely exposes more entrypoints to prettyplease's printer

--- a/c2rust-ast-printer/Cargo.toml
+++ b/c2rust-ast-printer/Cargo.toml
@@ -9,3 +9,6 @@ description = "Customized version of libsyntax rust pretty-printer"
 
 [dependencies]
 log = "0.4"
+syn = { version = "1.0", features = ["full", "proc-macro", "printing"] }
+proc-macro2 = "1.0"
+prettyplease = { path = "../prettyplease" } # = "0.1"
