--- a/c2rust-ast-builder/Cargo.toml
+++ b/c2rust-ast-builder/Cargo.toml
@@ -11,5 +11,5 @@ repository = "https://github.com/immunant/c2rust"
 description = "Rust AST builder support crate for the C2Rust project"
 
 [dependencies]
-proc-macro2 = "1.0"
+proc-macro2 = { version = "1.0", features = ["span-locations"]}
 syn = { version = "1.0", features = ["full", "proc-macro", "printing"] }
